# discount

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_and_test.sh
.cache/clangd/index/: CompositeDiscount.h.51C98C93857388DA.idx  DiscountStrategy.h.272D3AAAC078BB6C.idx  NoDiscount.h.804A26445AFE6F77.idx  Order.h.6A61084EC1C12333.idx  PercentageDiscount.h.A0AC1254FC59DF9A.idx  ThresholdDiscount.h.2A42DDFEA33594C5.idx  customer_service.h.555425BE2636EC98.idx  customer_service_manager.h.B73682FA5BBF2800.idx  customer_service_test.cc.002D7DB8B4CA0675.idx  default_customer_service.h.32F6ADF219CA1930.idx  discount_context_test.cc.EEF32B8EF4A64912.idx  discount_test.cc.3ED2F87ECBDA3D67.idx  gold_customer_service.h.653EBB5EF000375C.idx  main.cc.7D5C3E854E450D04.idx  platinum_customer_service.h.43C4E31C6AA762D5.idx  silver_customer_service.h.6F56E903C42EE240.idx  user_level.h.F32A1356CC25A1AE.idx
.github/scripts/: pr-review.py  requirements.txt
.github/workflows/: ci.yml  lint.yml  pr-review.yml
src/customer_service/: customer_service.h  customer_service_manager.h
src/customer_service/impl/: default_customer_service.h  gold_customer_service.h  platinum_customer_service.h  silver_customer_service.h
src/discount/: discount_context.h  discount_strategy.h  discount_strategy_factory.h
src/discount/basic/: no_discount.h  percentage_discount.h  percentage_discount_creator.h  threshold_discount.h
src/discount/composite/: composite_strategy.h
src/discount/conditional/: limited_time_discount.h  user_level_discount.h
src/order/: order.h
src/user/: user.h  user_context.h  user_level.h
test/: CMakeLists.txt  customer_service_test.cc  discount_context_test.cc
